# mini-jarvis

./: README.md  agent.py  database.py  jarvis.db  main.py  pyproject.toml  requirements.txt  tools.py
static/: index.html  manifest.json  service-worker.js
