[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "groq>=0.37.1",
    "langchain>=1.2.18",
    "langchain-core>=1.3.3",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "tavily-python>=0.7.24",
    "uvicorn>=0.46.0",
]
